@@ -1,3 +1,10 @@
+2002-11-03  Gary Thomas  <gthomas@ecoscentric.com>
+
+	* src/sys/kern/sockio.c (bsd_getname): Fix error where getsockname()
+	was actually performing getpeername().
+
+	* include/sys/uio.h: New file - compatability wrapper.
+
 2002-07-31  Gary Thomas  <gary@chez-thomas.org>
 
 	* src/sys/netinet/in_cksum.c: Fix problem on big endian machines.
